Migrate Eligibuddy to MongoDB and polish admin flows